style.css
@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@100;200;300;400;500;600;700;800&family=Bruno+Ace&family=Luckiest+Guy&display=swap');

* {
    box-sizing: border-box;
}

body {
    /* font-family: 'Bruno Ace', cursive; */
    font-family: 'Albert Sans', sans-serif;
    display: flex;
    flex-direction: column;
}

body.game {
    /* background-image: linear-gradient(140deg, #EADEDB 0%, #BC70A4 50%, #BFD641 75%); */
    background: url(./images/bg.jpg) no-repeat;
    background-size: 100vw 100vh, cover;
}

header h1 {
    font-family: 'Luckiest Guy', cursive;
    font-size: 10vw;
    -webkit-text-fill-color: yellowgreen;
    /* Will override color (regardless of order) */
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: black;
    letter-spacing: 0.5vw;
    width: 100%;
    text-align: center;
    margin: 1vw;
}

/* start page */
.start-block {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    padding: 3vw;
    margin: 1vw;
}

.start-block h2 {
    font-size: 4vw;
    text-align: center;
}

.start-block input {
    width: 40vw;
    height: 6vw;
    border: none;
    border-radius: 6px;
    font-size: 3vw;
    padding: 1vw;
    background-color: #BFD641;
    border: 2px solid black;

}

.start-btn {
    font-size: 3vw;
    text-align: center;
    border-radius: 10px;
    color: black;
    background-color: yellowgreen;
    padding: 1.5vw;
    font-weight: 700;
    cursor: pointer;
}

.start-block .rules {
    border: 3px solid #5845c6;
    border-radius: 10px;
    padding: 2vw 5vw;
}

.start-block li {
    font-size: 2.5vw;
    line-height: 1.7;
}

.msg {
    text-align: center;
    font-size: 2vw;
    color: rgb(244, 40, 40);
}

/* game page */

.question-block {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    font-size: 3.5vw;
    margin: 1vw;
    padding: 2vw;
    border-radius: 10px;
    background-color: #5845c6;
    color: white;
}

.question {
    flex: 6;
}

.timer {
    flex: 1;
    align-items: flex-end;
    text-align: center;
    border-radius: 10px;
    background-color: yellowgreen;
    color: #5845c6;
    padding: 0.5rem;
    font-weight: 700;
}

.answer-block {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    font-size: 4vw;
    margin: 1vw;
    padding: 2vw;
    border-radius: 10px;
    color: white;
    border: white  2px solid;
}

.answer {
    flex: 6;
    font-weight: 700;
}

.skip {
    flex: 2;
    align-items: flex-end;
    text-align: center;
    border-radius: 10px;
    color: yellowgreen;
    background-color: #5845c6;
    padding: 0.5rem;
    font-weight: 700;
    cursor: pointer;
}

.skip.no-click {
    pointer-events: none;
}

.bubble-body {
    display: grid;
    grid-column-start: auto;
    grid-template-columns: repeat(10, 1fr);
    height: 55vh;
    padding-top: 45vh;
    width: 95vw;
    margin: 0 auto;
    position: relative;
    border-radius: 10px;
}

@keyframes mymove {
    from {
        bottom: 0px;
    }

    to {
        bottom: 45vh;
    }
}

.bubble {
    font-family: 'Luckiest Guy', cursive;
    font-size: 6vw;
    -webkit-text-fill-color: rgb(255, 255, 255);
    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: black;
    border-radius: 50%;
    width: 9vw;
    height: 9vw;
    /* to make same width & height */
    text-align: center;
    padding: 1vw;
    margin: 0.2vw;
    cursor: pointer;
    position: relative;
    animation: mymove 6s infinite;
    animation-direction: alternate, reverse, normal;
}

.pop {
    background: radial-gradient(rgba(255, 255, 255, 0.8), black);
}

.hide {
    visibility: hidden;
    height: 0px;
}

.b1 {
    animation-timing-function: cubic-bezier(0.2, 0.5, 1, 0.2);
    background: radial-gradient(rgba(255, 255, 255, 0.1), #eaea5c);
}

.b2 {
    animation-timing-function: ease;
    background: radial-gradient(rgba(255, 255, 255, 0.1), skyblue);
}

.b3 {
    animation: mymove 8s infinite;
    animation-direction: alternate, reverse, normal;
    animation-timing-function: ease-in;
    background: radial-gradient(rgba(255, 255, 255, 0.1), lightgreen);
}

.b4 {
    animation-timing-function: ease-out;
    background: radial-gradient(rgba(255, 255, 255, 0.1), lightcoral);
}

.b5 {
    animation: mymove 4s infinite;
    animation-direction: alternate, reverse, normal;
    animation-timing-function: ease-in-out;
    background: radial-gradient(rgba(255, 255, 255, 0.1), #5845c6);
}

.b6 {
    animation-timing-function: linear;
    background: radial-gradient(rgba(255, 255, 255, 0.1), #EADEDB);
}

.b7 {
    animation: mymove 8s infinite;
    animation-direction: alternate, reverse, normal;
    animation-timing-function: cubic-bezier(0.5, 0.1, 0.9, 0.2);
    background: radial-gradient(rgba(255, 255, 255, 0.1), #535353);
}

.b8 {
    animation: mymove 4s infinite;
    animation-direction: alternate, reverse, normal;
    animation-timing-function: cubic-bezier(0.1, 0.3, 0.1, 0.1);
    background: radial-gradient(rgba(255, 255, 255, 0.1), #517de4);
}

.b9 {
    animation-timing-function:  cubic-bezier(0.4, 0.8, 0.5, 0.1);
    background: radial-gradient(rgba(255, 255, 255, 0.1), hotpink);

}

.b10 {
    animation-timing-function: cubic-bezier(0.4, 0.4, 0.1, 0.1);
    background: radial-gradient(rgba(255, 255, 255, 0.1), #0f9e35);
    color: white;
}

.game-over {
    height: 55vw;
    width: 70vw;
    margin: 0 auto;
    position: relative;
    background-color: rgba(26, 26, 26, 0.6);
    box-shadow: 5px 5px 15px rgba(26, 26, 26, 0.5);
    border-radius: 10px;
}

.game-over.show {
    top: -70vh;
}

.game-over.hide {
    visibility: hidden;
    height: 0px;
}

.game-over h1 {
    font-family: 'Luckiest Guy', cursive;
    font-size: 8vw;
    -webkit-text-fill-color: black;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: yellowgreen;
    letter-spacing: 0.5vw;
    width: 100%;
    text-align: center;
    margin: 2vw;
    padding-top: 2vw;
}

.game-over li {
    font-size: 3.5vw;
    list-style: none;
    line-height: 1.5;
    color: yellowgreen;
    font-weight: 700;
    width: 90%;
}

.game-over li span {
    float: right;
}

.game-over .start-over {
    font-family: 'Luckiest Guy', cursive;
    font-size: 5vw;
    font-weight: 400;
    letter-spacing: 0.5vw;
    width: 40vw;
    text-align: center;
    border-radius: 10px;
    background-color: yellowgreen;
    color: black#5845c6;
    padding: 0.5rem;
    margin: 3vh auto;
    cursor: pointer;
}

footer {
    width: 100vw;
    font-size: 0.7rem;
    text-align: right;
    color: yellowgreen;
    padding: 0.2rem 1.5rem;
}

